--- a/css/icon-fonts.css
+++ b/css/icon-fonts.css
@@ -8,5 +8,43 @@ p{
 
 }
 img{
-	
+
+}
+.nut-phone {
+	font-size: 1.3em;
+	position: relative ;
+	overflow: auto ;
+	bottom: 0 ;
+	font-weight: bold ;
+	width: 100%;
+	margin: 1em 0 0 0;
+}
+
+.nut-phone .touch:before,
+.nut-phone .desktop:before  { 
+	font-family: fontawesome ;
+	content: "\f095";
+	color: #9A1F32 ;
+	margin-right: .5em;
+}
+blockquote {
+	background: none;
+	padding: 1em 1em 1em 3em;
+	clear: both;
+	margin: 2em;
+	font-style: italic;
+	font-family: Arvo;
+	font-size: 1.5em;
+	color: rgba(0, 0, 0, 0.65);
+}
+
+blockquote:before {
+	font-family: fontawesome;
+	content: "\F10D";
+	display: block;
+	float: left;
+	position: relative;
+	margin: -0.75em 0 0 -1.5em;
+	font-size: 2em;
+	color: #C6A97F;
 }
